--- a/css/edit.css
+++ b/css/edit.css
@@ -124,6 +124,10 @@ header{
   pointer-events: all;
   transform: translateX(0);
 }
+.gadasvla{
+  position: relative;
+  height: 100%;
+}
 .gghh{
   margin-top: 64px;
   margin-bottom: 128px;
@@ -344,6 +348,7 @@ font-weight: 500;
   .blabla {
     padding-bottom: 20px;
     width: 100%;
+    height: 100%;
     padding-right: 0 !important;
   }
   .bakk{
