--- a/css/edit.css
+++ b/css/edit.css
@@ -128,6 +128,30 @@ header{
   position: relative;
   height: 100%;
 }
+.gadasvla2{
+  position: relative;
+}
+.texti3{
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(329deg, #1C1E53 -10.96%, rgba(28, 30, 83, 0.42) 103.96%);
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  color: white;
+  margin-bottom: 25px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all .6s;
+  transform: translateX(-100%);
+}
+.gadasvla2:hover .texti3{
+  opacity: 1;
+  pointer-events: all;
+  transform: translateX(0);
+}
 .gghh{
   margin-top: 64px;
   margin-bottom: 128px;
