--- a/css/edit.css
+++ b/css/edit.css
@@ -286,6 +286,31 @@ font-weight: 500;
   width: 100%;
 }
 
+.accordion span{
+  color: #2405F2;
+  font-family: Poppins;
+  font-size: 24px;
+  font-weight: 500;
+  margin-right: 53px;
+}
+.accordion button{
+  color: #282938;
+  font-family: Poppins;
+font-size: 24px;
+font-weight: 500;
+box-shadow: none !important;
+background-color: white !important;
+}
+
+.nebo{
+  margin-right: 126px;
+}
+
+.blck{
+  border: 0px;
+  border-bottom: 2px solid #ECECF1 !important;
+}
+
 
 
 
